# 803p-cups

./: .gitignore  .gitmodules  70-Q803P.rules  CMakeLists.txt  LICENSE  README.md  dp-dapper.drv  zjdrv.drv
.ccls-cache/@@home@ethan@Documents@Recipt@803p-cups/: @usr@include@alloca.h.blob  @usr@include@arpa@inet.h.blob  @usr@include@asm-generic@bitsperlong.h.blob  @usr@include@asm-generic@posix_types.h.blob  @usr@include@asm-generic@socket.h.blob  @usr@include@asm-generic@sockios.h.blob  @usr@include@asm@bitsperlong.h.blob  @usr@include@asm@posix_types.h.blob  @usr@include@asm@posix_types_64.h.blob  @usr@include@asm@socket.h.blob  @usr@include@asm@sockios.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@confname.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@environments.h.blob  @usr@include@bits@fcntl-linux.h.blob  @usr@include@bits@fcntl.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@flt-eval-method.h.blob  @usr@include@bits@fp-fast.h.blob  @usr@include@bits@fp-logb.h.blob  @usr@include@bits@getopt_core.h.blob  @usr@include@bits@getopt_posix.h.blob  @usr@include@bits@in.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@libm-simd-decl-stubs.h.blob  @usr@include@bits@local_lim.h.blob  @usr@include@bits@locale.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@math-vector.h.blob  @usr@include@bits@mathcalls-helper-functions.h.blob  @usr@include@bits@mathcalls.h.blob  @usr@include@bits@netdb.h.blob  @usr@include@bits@posix1_lim.h.blob  @usr@include@bits@posix2_lim.h.blob  @usr@include@bits@posix_opt.h.blob  @usr@include@bits@pthread_stack_min-dynamic.h.blob  (+119 more)
.ccls-cache/@home@ethan@Documents@Recipt@803p-cups/: filter@rastertodp.c  filter@rastertodp.c.blob  libs@libdither@src@libdither@dither_dbs.c.blob  libs@libdither@src@libdither@dither_dotdiff.c.blob  libs@libdither@src@libdither@dither_dotdiff_data.h.blob  libs@libdither@src@libdither@dither_dotlippens.c.blob  libs@libdither@src@libdither@dither_dotlippens_data.h.blob  libs@libdither@src@libdither@dither_errordiff.c.blob  libs@libdither@src@libdither@dither_errordiff_data.h.blob  libs@libdither@src@libdither@dither_grid.c.blob  libs@libdither@src@libdither@dither_kallebach.c.blob  libs@libdither@src@libdither@dither_kallebach_data.h.blob  libs@libdither@src@libdither@dither_ordered.c.blob  libs@libdither@src@libdither@dither_ordered_data.h.blob  libs@libdither@src@libdither@dither_pattern.c.blob  libs@libdither@src@libdither@dither_pattern_data.h.blob  libs@libdither@src@libdither@dither_riemersma.c.blob  libs@libdither@src@libdither@dither_riemersma_data.h.blob  libs@libdither@src@libdither@dither_threshold.c.blob  libs@libdither@src@libdither@dither_varerrdiff.c.blob  libs@libdither@src@libdither@dither_varerrdiff_data.h.blob  libs@libdither@src@libdither@ditherimage.c.blob  libs@libdither@src@libdither@gamma.c.blob  libs@libdither@src@libdither@hash.c.blob  libs@libdither@src@libdither@hash.h.blob  libs@libdither@src@libdither@libdither.c.blob  libs@libdither@src@libdither@libdither.h.blob  libs@libdither@src@libdither@matrices.h.blob  libs@libdither@src@libdither@queue.c.blob  libs@libdither@src@libdither@queue.h.blob  libs@libdither@src@libdither@random.c.blob  libs@libdither@src@libdither@random.h.blob
.config/helix/: languages.toml
filter/: rastertodp.c
ppd/: 803p.ppd  Q803p.ppd  tm20.ppd  xp58.ppd  zj58.ppd  zj80.ppd
